# google-smart-home-integration

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  calendar_sync.py  env.example  google_helpers.py  http_server.py  keep_sync.py  nextcloud_helpers.py  pyproject.toml  requeriments.txt  task_sync.py  variables.py
src/: calendar_sync.py  google_helpers.py  keep_sync.py  privacy_policy.py  task_sync.py  variables.py
